Mirror vertex group can't work normally in the edit mode #48387

Closed
opened 2016-05-09 12:19:16 +02:00 by Leroy · 7 comments

System Information
windows 7 64bit sp1

Blender Version
Broken: 2.77a abf6f08
Worked: (optional)

Mirror vertex group can't work normally in the edit mode, but in weight paint mode is worked.

Exact steps for others to reproduce the error

Mirror vertex group in the edit mode have lots problem, some like:

If the vertex in the vertex group not selected, the Mirror vertex group will not work, and will report 0 vertices mirrored, xxxx failed.

If the vertex in the vertex group have selected, the Mirror vertex group will reportxxx vertices mirrored, xxxx failed. but when you press A deselect all vertex, and than press "select" button in the vertex group pannel,you can find it's will select original vertex, not mirroired, and if you switch to weight paint mode, you can find no weight in the group

if you mirror the vertex group in the weight paint mode, the mirror vertex will work, but when you switch to the edit mode, than press "select" button, and you can find ,it's not right.

I have tried this in day build version, it's still not right, and I record one gif, you can get at below, hope can help you, sorry for my bad english.

45.gif

**System Information** windows 7 64bit sp1 **Blender Version** Broken: 2.77a abf6f08 Worked: (optional) Mirror vertex group can't work normally in the edit mode, but in weight paint mode is worked. **Exact steps for others to reproduce the error** Mirror vertex group in the edit mode have lots problem, some like: **If the vertex in the vertex group not selected, the Mirror vertex group will not work, and will report 0 vertices mirrored, xxxx failed.** If the vertex in the vertex group have selected, the Mirror vertex group will report**xxx vertices mirrored**, xxxx failed. but when you press A deselect all vertex, and than press "select" button in the vertex group pannel,**you can find it's will select original vertex, not mirroired, and if you switch to weight paint mode, you can find no weight in the group** if you mirror the vertex group in the weight paint mode, the mirror vertex will work, but when you switch to the edit mode, than press "select" button, and you can find ,it's not right. I have tried this in day build version, it's still not right, and I record one gif, you can get at below, hope can help you, sorry for my bad english. ![45.gif](https://archive.blender.org/developer/F309877/45.gif)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie
Campbell Barton self-assigned this 2016-05-09 13:30:27 +02:00

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

There was an error reporting the number of failed verts,
fixed 299a25cb35.

Further, this is working as expected.

  • Weight paint mode without verts selected acts as if all vertices are selected (in edit-mode).
  • When both sides are selected they're swapped.

If you want to copy one side to another. you can select half of the vertices with: "Select -> Side of Axis" menu item.

closing.

There was an error reporting the number of failed verts, fixed 299a25cb35. Further, this is working as expected. - Weight paint mode without verts selected acts as if all vertices are selected (in edit-mode). - When both sides are selected they're swapped. If you want to copy one side to another. you can select half of the vertices with: "Select -> Side of Axis" menu item. closing.
Author

Hi, very thanks for you fix this, and I still have some question, does this have fix in the day build version? I am meaning the "select" button is use to select the vertex in current vertex group, but the selected vertex in the edit mode not same as the weight paint mode, is this right. something like in the flow images, sorry for my english

12.png

Hi, very thanks for you fix this, and I still have some question, does this have fix in the day build version? I am meaning the "select" button is use to select the vertex in current vertex group, but the selected vertex in the edit mode not same as the weight paint mode, is this right. something like in the flow images, sorry for my english ![12.png](https://archive.blender.org/developer/F309954/12.png)

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

This issue was referenced by c1e4aaa289

This issue was referenced by c1e4aaa289f64748093d4cd7590f5836b8873466
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48387
No description provided.