Fix T48387: Mirror weights keeps groups assigned

Swapping the weights kept zero weight verts assigned.